add style and images for enter page

--- a/app/scripts/home/enter.component.html
+++ b/app/scripts/home/enter.component.html
@@ -1,4 +1,7 @@
-<div class="bg-slider">
+<carousel></carousel>
+<div id="enter" class="bg-slider">
   <artist-name artist="$ctrl.artist"></artist-name>
-  <a ng-link="['Main']">Enter</a>
+  <div class="enter-link-wrapper">
+    <a class="enter-link" ng-link="['Main']">Enter</a>
+  </div>
 </div>
