style menu, added social icons

--- a/app/scripts/common/carousel.component.html
+++ b/app/scripts/common/carousel.component.html
@@ -1,4 +1,4 @@
-<div ng-repeat="image in $ctrl.images">
+<div class="bg-carousel-wrapper" ng-repeat="image in $ctrl.images">
   <div class="bg-carousel" ng-style="{ 'background-image': 'url(' + $ctrl.path + image + ')' }">
   </div>
 </div>
