--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -5,3 +5,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'AdobeGaramondPro';
+  src: url("../fonts/AdobeGaramondPro/alternategotno3d-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
