added artworks and news

--- a/app/scripts/home/enter.component.html
+++ b/app/scripts/home/enter.component.html
@@ -2,6 +2,6 @@
 <div id="enter" class="bg-slider">
   <artist-name artist="$ctrl.artist"></artist-name>
   <div class="enter-link-wrapper">
-    <a class="enter-link" ng-link="['Main']">Enter</a>
+    <a class="enter-link" ng-link="['Main/Works', {type: 'drawing'}]">Enter</a>
   </div>
 </div>
