--- a/app/scripts/home/main.component.html
+++ b/app/scripts/home/main.component.html
@@ -6,8 +6,8 @@
   <artist-name artist="$ctrl.artist" ng-link="['Enter']"></artist-name>
   <nav id="menu">
     <a ng-link="['News']">News</a>
-    <a ng-link="['Collage']">Collage</a>
-    <a ng-link="['Drawing']">Drawing</a>
+    <a ng-link="['Works', {type: 'collage'}]">Collage</a>
+    <a ng-link="['Works', {type: 'drawing'}]">Drawing</a>
     <a ng-link="['About']">About & Contact</a>
     <a target="_blank" href="http://www.saatchiart.com/elinaev">Shop</a>
   </nav>
