--- a/app/scripts/home/news.component.html
+++ b/app/scripts/home/news.component.html
@@ -1,1 +1,13 @@
-checkout my facebook
+<div id="news">
+  <div class="article">
+    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Felina.evstigneeva.1%2Fposts%2F645420795607698&width=500" width="500" height="452" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+  </div>
+
+  <div class="article">
+    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Felina.evstigneeva.1%2Fposts%2F642689295880848&width=500" width="500" height="626" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+  </div>
+
+  <div class="article">
+    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Felina.evstigneeva.1%2Fposts%2F626327367517041&width=500" width="500" height="638" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+  </div>
+</div>
