aslint updates, added flip, fixed lightbox, style about

--- a/app/scripts/home/main.component.html
+++ b/app/scripts/home/main.component.html
@@ -8,6 +8,7 @@
     <a ng-link="['News']">News</a>
     <a ng-link="['Works', {type: 'collage'}]">Collage</a>
     <a ng-link="['Works', {type: 'drawing'}]">Drawing</a>
+    <a ng-link="['Works', {type: 'painting'}]">Painting</a>
     <a ng-link="['About']">About & Contact</a>
     <a target="_blank" href="http://www.saatchiart.com/elinaev">Shop</a>
   </nav>
