--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -12,3 +12,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'ProximaNova';
+  src: url("../fonts/ProximaNova/proximanova-regular-webfont.eot");
+  src: url("../fonts/ProximaNova/proximanova-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova/proximanova-regular-webfont.woff") format("woff"), url("../fonts/ProximaNova/proximanova-regular-webfont.ttf") format("truetype"), url("../fonts/ProximaNova/proximanova-regular-webfont.svg#alternategotno3dregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
