prepared for publishing, gulp file updated

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,7 @@
 @import    "settings";
 @import    "fonts";
 @import    "base";
+@import    "vendor/baguetteBox.min";
 
 @import    "pages/page-enter";
 @import    "pages/page-main";
