--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -7,8 +7,8 @@
 }
 
 @font-face {
-  font-family: 'AdobeGaramondPro';
-  src: url("../fonts/AdobeGaramondPro/alternategotno3d-webfont.ttf") format("truetype");
+  font-family: 'EB Garamond';
+  src: url("../fonts/EBGaramond/EBGaramond12-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
