--- a/app/styles/pages/_page-works.scss
+++ b/app/styles/pages/_page-works.scss
@@ -26,7 +26,7 @@
   }
 
   &:hover .single-work-flipper {
-    transform: rotateY(-180deg);
+    transform: rotateY(180deg);
   }
 }
 
@@ -34,7 +34,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  transition: 0.6s;
+  transition: 1s;
 	transform-style: preserve-3d;
 }
 
@@ -49,6 +49,7 @@
 
 .back {
   transform: rotateY(-180deg);
+  background-size:cover;
 }
 
 .back,
